# rk2try002

./: CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  README.md  main  main.cpp
.github/workflows/: OG.yml
class/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cpp.cpp  header.h
test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test  test.cpp
